--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: tonic-starter
-description: ""
+title: MyJekyllTheme
+description: "A simple, sleek, dark theme."
 encoding: utf-8
 
 exclude: ["README.md", "LICENSE", "*.gem", "*.gemspec", "Gemfile.lock"]
